# vdpm

./: Cargo.toml  README.md  config.toml  package-lock.json  package.json
src/: cli_args.rs  config_loader.rs  error.rs  logger.rs  main.rs  plan.md  test.rs  utils.rs
src/cli/: args.rs  mod.rs
src/cli/commands/: disable.rs  enable.rs  install.rs  interactive.rs  list.rs  mod.rs  uninstall.rs
src/core/: mod.rs  plugin.rs  registery.rs  registry.rs
src/fs/: mod.rs  operations.rs  paths.rs
src/interactive/: event_dispatcher.rs  mod.rs  registry_snapshot.rs  watcher.rs
