[package]
name = "vdpm"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "4.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
notify = "8.0.0"
sha2 = "0.10.9"
polars = { version = "0.48.1", features = ["csv", "semi_anti_join", "dtype-u8"] }
libc = "0.2"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.41"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "local-time"] }
tracing-appender = "0.2.3"
reqwest = "0.12.24"
